--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1>리듬게임</h1>
+        <buttonj id="startBtn">게임 시작</buttonj>
         <div id="score-board">
             점수 : <span id="score">0</span> 놓친 아이템 : <span id="miss">0</span> 시간 : <span id="timer">60</span>초
         </div>
